tests/valid/trait/method_call_explicit_ufcs_extra_arg.facet
trait Combiner {
  fn combine(self: Self, rhs: unrestricted isize) -> unrestricted isize;
}

impl Combiner for unrestricted isize {
  fn combine(self: Self, rhs: unrestricted isize) -> unrestricted isize {
    rhs
  }
}

fn main() -> unrestricted isize {
  (<unrestricted isize as Combiner>::combine 0 1)
}
