tests/invalid/module/use_ambiguous_import.facet
pub mod api {
  pub fn id(x: affine isize) -> affine isize { x }
}

pub mod other {
  pub fn id(x: affine isize) -> affine isize { x }
}

use api::id;
use other::id;

fn main() -> affine isize {
  (id 1)
}
